gen_parser/ConfigScriptParser.cpp

    #include <variant>
    #include <any>


// Generated from .\ConfigScript.g4 by ANTLR 4.13.0


#include "ConfigScriptListener.h"

#include "ConfigScriptParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct ConfigScriptParserStaticData final {
  ConfigScriptParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  ConfigScriptParserStaticData(const ConfigScriptParserStaticData&) = delete;
  ConfigScriptParserStaticData(ConfigScriptParserStaticData&&) = delete;
  ConfigScriptParserStaticData& operator=(const ConfigScriptParserStaticData&) = delete;
  ConfigScriptParserStaticData& operator=(ConfigScriptParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag configscriptParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
ConfigScriptParserStaticData *configscriptParserStaticData = nullptr;

void configscriptParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (configscriptParserStaticData != nullptr) {
    return;
  }
#else
  assert(configscriptParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<ConfigScriptParserStaticData>(
    std::vector<std::string>{
      "config", "object", "property", "propertyValue", "objectValue", "intVector", 
      "floatVector", "comment"
    },
    std::vector<std::string>{
      "", "'{'", "'}'"
    },
    std::vector<std::string>{
      "", "", "", "STRING", "BOOL", "DOUBLE_QUOTED_STRING", "SINGLE_QUOTED_STRING", 
      "Identifier", "INT", "FLOAT", "WHITESPACE", "ALPHA", "NUM", "LINE_COMMENT", 
      "BLOCK_COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  configscriptParserStaticData = staticData.release();
}

}

ConfigScriptParser::ConfigScriptParser(TokenStream *input) : ConfigScriptParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

ConfigScriptParser::ConfigScriptParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  ConfigScriptParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *configscriptParserStaticData->atn, configscriptParserStaticData->decisionToDFA, configscriptParserStaticData->sharedContextCache, options);
}

ConfigScriptParser::~ConfigScriptParser() {
  delete _interpreter;
}

const atn::ATN& ConfigScriptParser::getATN() const {
  return *configscriptParserStaticData->atn;
}

std::string ConfigScriptParser::getGrammarFileName() const {
  return "ConfigScript.g4";
}

const std::vector<std::string>& ConfigScriptParser::getRuleNames() const {
  return configscriptParserStaticData->ruleNames;
}

const dfa::Vocabulary& ConfigScriptParser::getVocabulary() const {
  return configscriptParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView ConfigScriptParser::getSerializedATN() const {
  return configscriptParserStaticData->serializedATN;
}


//----------------- ConfigContext ------------------------------------------------------------------

ConfigScriptParser::ConfigContext::ConfigContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ConfigScriptParser::ConfigContext::EOF() {
  return getToken(ConfigScriptParser::EOF, 0);
}

std::vector<ConfigScriptParser::ObjectContext *> ConfigScriptParser::ConfigContext::object() {
  return getRuleContexts<ConfigScriptParser::ObjectContext>();
}

ConfigScriptParser::ObjectContext* ConfigScriptParser::ConfigContext::object(size_t i) {
  return getRuleContext<ConfigScriptParser::ObjectContext>(i);
}


size_t ConfigScriptParser::ConfigContext::getRuleIndex() const {
  return ConfigScriptParser::RuleConfig;
}

void ConfigScriptParser::ConfigContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ConfigScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConfig(this);
}

void ConfigScriptParser::ConfigContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ConfigScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConfig(this);
}

ConfigScriptParser::ConfigContext* ConfigScriptParser::config() {
  ConfigContext *_localctx = _tracker.createInstance<ConfigContext>(_ctx, getState());
  enterRule(_localctx, 0, ConfigScriptParser::RuleConfig);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(19);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ConfigScriptParser::Identifier) {
      setState(16);
      antlrcpp::downCast<ConfigContext *>(_localctx)->objects = object();
      setState(21);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(22);
    match(ConfigScriptParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ObjectContext ------------------------------------------------------------------

ConfigScriptParser::ObjectContext::ObjectContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ConfigScriptParser::ObjectContext::Identifier() {
  return getToken(ConfigScriptParser::Identifier, 0);
}

ConfigScriptParser::ObjectValueContext* ConfigScriptParser::ObjectContext::objectValue() {
  return getRuleContext<ConfigScriptParser::ObjectValueContext>(0);
}


size_t ConfigScriptParser::ObjectContext::getRuleIndex() const {
  return ConfigScriptParser::RuleObject;
}

void ConfigScriptParser::ObjectContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ConfigScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterObject(this);
}

void ConfigScriptParser::ObjectContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ConfigScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitObject(this);
}

ConfigScriptParser::ObjectContext* ConfigScriptParser::object() {
  ObjectContext *_localctx = _tracker.createInstance<ObjectContext>(_ctx, getState());
  enterRule(_localctx, 2, ConfigScriptParser::RuleObject);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(24);
    antlrcpp::downCast<ObjectContext *>(_localctx)->identifierToken = match(ConfigScriptParser::Identifier);
    setState(25);
    antlrcpp::downCast<ObjectContext *>(_localctx)->value = objectValue();
     antlrcpp::downCast<ObjectContext *>(_localctx)->name =  antlrcpp::downCast<ObjectContext *>(_localctx)->identifierToken->getText(); 
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PropertyContext ------------------------------------------------------------------

ConfigScriptParser::PropertyContext::PropertyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ConfigScriptParser::PropertyContext::Identifier() {
  return getToken(ConfigScriptParser::Identifier, 0);
}

ConfigScriptParser::PropertyValueContext* ConfigScriptParser::PropertyContext::propertyValue() {
  return getRuleContext<ConfigScriptParser::PropertyValueContext>(0);
}


size_t ConfigScriptParser::PropertyContext::getRuleIndex() const {
  return ConfigScriptParser::RuleProperty;
}

void ConfigScriptParser::PropertyContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ConfigScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProperty(this);
}

void ConfigScriptParser::PropertyContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ConfigScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProperty(this);
}

ConfigScriptParser::PropertyContext* ConfigScriptParser::property() {
  PropertyContext *_localctx = _tracker.createInstance<PropertyContext>(_ctx, getState());
  enterRule(_localctx, 4, ConfigScriptParser::RuleProperty);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(28);
    antlrcpp::downCast<PropertyContext *>(_localctx)->identifierToken = match(ConfigScriptParser::Identifier);
    setState(29);
    propertyValue();
     antlrcpp::downCast<PropertyContext *>(_localctx)->name =  antlrcpp::downCast<PropertyContext *>(_localctx)->identifierToken->getText(); antlrcpp::downCast<ObjectValueContext*>(_localctx->parent)->propertyMap[_localctx->name] = _localctx->value; 
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PropertyValueContext ------------------------------------------------------------------

ConfigScriptParser::PropertyValueContext::PropertyValueContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ConfigScriptParser::IntVectorContext* ConfigScriptParser::PropertyValueContext::intVector() {
  return getRuleContext<ConfigScriptParser::IntVectorContext>(0);
}

ConfigScriptParser::FloatVectorContext* ConfigScriptParser::PropertyValueContext::floatVector() {
  return getRuleContext<ConfigScriptParser::FloatVectorContext>(0);
}

tree::TerminalNode* ConfigScriptParser::PropertyValueContext::INT() {
  return getToken(ConfigScriptParser::INT, 0);
}

tree::TerminalNode* ConfigScriptParser::PropertyValueContext::FLOAT() {
  return getToken(ConfigScriptParser::FLOAT, 0);
}

tree::TerminalNode* ConfigScriptParser::PropertyValueContext::BOOL() {
  return getToken(ConfigScriptParser::BOOL, 0);
}

tree::TerminalNode* ConfigScriptParser::PropertyValueContext::STRING() {
  return getToken(ConfigScriptParser::STRING, 0);
}

ConfigScriptParser::ObjectValueContext* ConfigScriptParser::PropertyValueContext::objectValue() {
  return getRuleContext<ConfigScriptParser::ObjectValueContext>(0);
}


size_t ConfigScriptParser::PropertyValueContext::getRuleIndex() const {
  return ConfigScriptParser::RulePropertyValue;
}

void ConfigScriptParser::PropertyValueContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ConfigScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPropertyValue(this);
}

void ConfigScriptParser::PropertyValueContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ConfigScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPropertyValue(this);
}

ConfigScriptParser::PropertyValueContext* ConfigScriptParser::propertyValue() {
  PropertyValueContext *_localctx = _tracker.createInstance<PropertyValueContext>(_ctx, getState());
  enterRule(_localctx, 6, ConfigScriptParser::RulePropertyValue);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(49);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(32);
      antlrcpp::downCast<PropertyValueContext *>(_localctx)->intVectorContext = intVector();
       antlrcpp::downCast<PropertyContext*>(_localctx->parent)->value = antlrcpp::downCast<PropertyValueContext *>(_localctx)->intVectorContext->elements; 
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(35);
      antlrcpp::downCast<PropertyValueContext *>(_localctx)->floatVectorContext = floatVector();
       antlrcpp::downCast<PropertyContext*>(_localctx->parent)->value = antlrcpp::downCast<PropertyValueContext *>(_localctx)->floatVectorContext->elements; 
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(38);
      antlrcpp::downCast<PropertyValueContext *>(_localctx)->intToken = match(ConfigScriptParser::INT);
       antlrcpp::downCast<PropertyContext*>(_localctx->parent)->value = std::stoi((antlrcpp::downCast<PropertyValueContext *>(_localctx)->intToken != nullptr ? antlrcpp::downCast<PropertyValueContext *>(_localctx)->intToken->getText() : "")); 
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(40);
      antlrcpp::downCast<PropertyValueContext *>(_localctx)->floatToken = match(ConfigScriptParser::FLOAT);
       antlrcpp::downCast<PropertyContext*>(_localctx->parent)->value = std::stof((antlrcpp::downCast<PropertyValueContext *>(_localctx)->floatToken != nullptr ? antlrcpp::downCast<PropertyValueContext *>(_localctx)->floatToken->getText() : "")); 
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(42);
      antlrcpp::downCast<PropertyValueContext *>(_localctx)->boolToken = match(ConfigScriptParser::BOOL);
       antlrcpp::downCast<PropertyContext*>(_localctx->parent)->value = static_cast<bool>((antlrcpp::downCast<PropertyValueContext *>(_localctx)->boolToken != nullptr ? antlrcpp::downCast<PropertyValueContext *>(_localctx)->boolToken->getText() : "") == "true"); 
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(44);
      antlrcpp::downCast<PropertyValueContext *>(_localctx)->stringToken = match(ConfigScriptParser::STRING);
       antlrcpp::downCast<PropertyContext*>(_localctx->parent)->value = (antlrcpp::downCast<PropertyValueContext *>(_localctx)->stringToken != nullptr ? antlrcpp::downCast<PropertyValueContext *>(_localctx)->stringToken->getText() : ""); 
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(46);
      objectValue();
       antlrcpp::downCast<PropertyContext*>(_localctx->parent)->value = antlrcpp::downCast<PropertyValueContext*>(_localctx)->objectValue(); 
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ObjectValueContext ------------------------------------------------------------------

ConfigScriptParser::ObjectValueContext::ObjectValueContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ConfigScriptParser::PropertyContext *> ConfigScriptParser::ObjectValueContext::property() {
  return getRuleContexts<ConfigScriptParser::PropertyContext>();
}

ConfigScriptParser::PropertyContext* ConfigScriptParser::ObjectValueContext::property(size_t i) {
  return getRuleContext<ConfigScriptParser::PropertyContext>(i);
}

tree::TerminalNode* ConfigScriptParser::ObjectValueContext::STRING() {
  return getToken(ConfigScriptParser::STRING, 0);
}


size_t ConfigScriptParser::ObjectValueContext::getRuleIndex() const {
  return ConfigScriptParser::RuleObjectValue;
}

void ConfigScriptParser::ObjectValueContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ConfigScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterObjectValue(this);
}

void ConfigScriptParser::ObjectValueContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ConfigScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitObjectValue(this);
}

ConfigScriptParser::ObjectValueContext* ConfigScriptParser::objectValue() {
  ObjectValueContext *_localctx = _tracker.createInstance<ObjectValueContext>(_ctx, getState());
  enterRule(_localctx, 8, ConfigScriptParser::RuleObjectValue);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(69);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ConfigScriptParser::T__0: {
        enterOuterAlt(_localctx, 1);
        setState(51);
        match(ConfigScriptParser::T__0);
        setState(55);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == ConfigScriptParser::Identifier) {
          setState(52);
          property();
          setState(57);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(58);
        match(ConfigScriptParser::T__1);
        break;
      }

      case ConfigScriptParser::STRING: {
        enterOuterAlt(_localctx, 2);
        setState(59);
        antlrcpp::downCast<ObjectValueContext *>(_localctx)->stringToken = match(ConfigScriptParser::STRING);
        setState(60);
        match(ConfigScriptParser::T__0);
        setState(64);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == ConfigScriptParser::Identifier) {
          setState(61);
          property();
          setState(66);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(67);
        match(ConfigScriptParser::T__1);
         antlrcpp::downCast<ObjectValueContext *>(_localctx)->classifier =  (antlrcpp::downCast<ObjectValueContext *>(_localctx)->stringToken != nullptr ? antlrcpp::downCast<ObjectValueContext *>(_localctx)->stringToken->getText() : ""); 
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IntVectorContext ------------------------------------------------------------------

ConfigScriptParser::IntVectorContext::IntVectorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> ConfigScriptParser::IntVectorContext::INT() {
  return getTokens(ConfigScriptParser::INT);
}

tree::TerminalNode* ConfigScriptParser::IntVectorContext::INT(size_t i) {
  return getToken(ConfigScriptParser::INT, i);
}


size_t ConfigScriptParser::IntVectorContext::getRuleIndex() const {
  return ConfigScriptParser::RuleIntVector;
}

void ConfigScriptParser::IntVectorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ConfigScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIntVector(this);
}

void ConfigScriptParser::IntVectorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ConfigScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIntVector(this);
}

ConfigScriptParser::IntVectorContext* ConfigScriptParser::intVector() {
  IntVectorContext *_localctx = _tracker.createInstance<IntVectorContext>(_ctx, getState());
  enterRule(_localctx, 10, ConfigScriptParser::RuleIntVector);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(72); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(71);
      match(ConfigScriptParser::INT);
      setState(74); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == ConfigScriptParser::INT);
     auto v = _localctx->INT(); std::for_each(v.begin(), v.end(), [&](auto* node) { _localctx->elements.push_back(std::stoi(node->getText())); }); 
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FloatVectorContext ------------------------------------------------------------------

ConfigScriptParser::FloatVectorContext::FloatVectorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> ConfigScriptParser::FloatVectorContext::FLOAT() {
  return getTokens(ConfigScriptParser::FLOAT);
}

tree::TerminalNode* ConfigScriptParser::FloatVectorContext::FLOAT(size_t i) {
  return getToken(ConfigScriptParser::FLOAT, i);
}


size_t ConfigScriptParser::FloatVectorContext::getRuleIndex() const {
  return ConfigScriptParser::RuleFloatVector;
}

void ConfigScriptParser::FloatVectorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ConfigScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFloatVector(this);
}

void ConfigScriptParser::FloatVectorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ConfigScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFloatVector(this);
}

ConfigScriptParser::FloatVectorContext* ConfigScriptParser::floatVector() {
  FloatVectorContext *_localctx = _tracker.createInstance<FloatVectorContext>(_ctx, getState());
  enterRule(_localctx, 12, ConfigScriptParser::RuleFloatVector);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(79); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(78);
      match(ConfigScriptParser::FLOAT);
      setState(81); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == ConfigScriptParser::FLOAT);
     auto v = _localctx->FLOAT(); std::for_each(v.begin(), v.end(), [&](auto* node) { _localctx->elements.push_back(std::stof(node->getText())); }); 
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CommentContext ------------------------------------------------------------------

ConfigScriptParser::CommentContext::CommentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ConfigScriptParser::CommentContext::LINE_COMMENT() {
  return getToken(ConfigScriptParser::LINE_COMMENT, 0);
}

tree::TerminalNode* ConfigScriptParser::CommentContext::BLOCK_COMMENT() {
  return getToken(ConfigScriptParser::BLOCK_COMMENT, 0);
}


size_t ConfigScriptParser::CommentContext::getRuleIndex() const {
  return ConfigScriptParser::RuleComment;
}

void ConfigScriptParser::CommentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ConfigScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterComment(this);
}

void ConfigScriptParser::CommentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ConfigScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitComment(this);
}

ConfigScriptParser::CommentContext* ConfigScriptParser::comment() {
  CommentContext *_localctx = _tracker.createInstance<CommentContext>(_ctx, getState());
  enterRule(_localctx, 14, ConfigScriptParser::RuleComment);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(85);
    _la = _input->LA(1);
    if (!(_la == ConfigScriptParser::LINE_COMMENT

    || _la == ConfigScriptParser::BLOCK_COMMENT)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

void ConfigScriptParser::initialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  configscriptParserInitialize();
#else
  ::antlr4::internal::call_once(configscriptParserOnceFlag, configscriptParserInitialize);
#endif
}
